# apps.sharpenthesaws

./: README.md  pyproject.toml
apps/apps/: settings.py  urls.py
apps/one_country_a_day/: apps.py  models.py  tasks.py  urls.py  views.py
apps/one_country_a_day/migrations/: 0001_initial.py  0001_preload_data.py  0002_preload_data.py  0003_countrydata.py  0004_countrydata_created_at.py
apps/one_country_a_day/templates/one-country-a-day/: index.html
